Accessibility improvements on the HTML
1. Using a more semantic tag
2. Adding a visually hidden <thead>
3. Corrected the heading for special section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section>
           <img
             src="./assets/images/image-omelette.jpeg"
-            alt="Image of an omelette"
+            alt="A golden-brown omelette folded with fresh vegetables"
             width="375"
             height="171"
           />
@@ -38,11 +38,11 @@
             your choice of cheese, vegetables, or meats.
           </p>
           <section class="special-note">
-            <h3>Preparation time</h3>
+            <h2>Preparation time</h2>
             <ul>
-              <li><label>Total:</label> Approximately 10 minutes</li>
-              <li><label>Preparation:</label> 5 minutes</li>
-              <li><label>Cooking:</label> 5 minutes</li>
+              <li><b>Total:</b> Approximately 10 minutes</li>
+              <li><b>Preparation:</b> 5 minutes</li>
+              <li><b>Cooking:</b> 5 minutes</li>
             </ul>
           </section>
         </section>
@@ -63,32 +63,32 @@
           <h2>Instructions</h2>
           <ol>
             <li>
-              <label>Beat the eggs:</label> In a bowl, beat the eggs with a
-              pinch of salt and pepper until they are well mixed. You can add a
+              <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of
+              salt and pepper until they are well mixed. You can add a
               tablespoon of water or milk for a fluffier texture.
             </li>
             <li>
-              <label>Heat the pan:</label> Place a non-stick frying pan over
-              medium heat and add butter or oil.
+              <b>Heat the pan:</b> Place a non-stick frying pan over medium heat
+              and add butter or oil.
             </li>
             <li>
-              <label>Cook the omelette:</label> Once the butter is melted and
-              bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
-              coat the surface.
+              <b>Cook the omelette:</b> Once the butter is melted and bubbling,
+              pour in the eggs. Tilt the pan to ensure the eggs evenly coat the
+              surface.
             </li>
             <li>
-              <label>Add fillings (optional):</label> When the eggs begin to set
-              at the edges but are still slightly runny in the middle, sprinkle
-              your chosen fillings over one half of the omelette.
+              <b>Add fillings (optional):</b> When the eggs begin to set at the
+              edges but are still slightly runny in the middle, sprinkle your
+              chosen fillings over one half of the omelette.
             </li>
             <li>
-              <label>Fold and serve:</label> As the omelette continues to cook,
+              <b>Fold and serve:</b> As the omelette continues to cook,
               carefully lift one edge and fold it over the fillings. Let it cook
               for another minute, then slide it onto a plate.
             </li>
             <li>
-              <label>Enjoy:</label> Serve hot, with additional salt and pepper
-              if needed.
+              <b>Enjoy:</b> Serve hot, with additional salt and pepper if
+              needed.
             </li>
           </ol>
         </section>
@@ -100,22 +100,30 @@
             additional fillings.
           </p>
           <table>
-            <tr>
-              <td>Calories</td>
-              <td>277kcal</td>
-            </tr>
-            <tr>
-              <td>Carbs</td>
-              <td>0g</td>
-            </tr>
-            <tr>
-              <td>Protein</td>
-              <td>20g</td>
-            </tr>
-            <tr>
-              <td>Fat</td>
-              <td>22g</td>
-            </tr>
+            <thead class="visually-hidden">
+              <tr>
+                <th>Nutrients</th>
+                <th>Amount</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Calories</td>
+                <td>277kcal</td>
+              </tr>
+              <tr>
+                <td>Carbs</td>
+                <td>0g</td>
+              </tr>
+              <tr>
+                <td>Protein</td>
+                <td>20g</td>
+              </tr>
+              <tr>
+                <td>Fat</td>
+                <td>22g</td>
+              </tr>
+            </tbody>
           </table>
         </section>
       </article>
