--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           <table>
             <thead class="visually-hidden">
               <tr>
-                <th>Nutrients</th>
-                <th>Amount</th>
+                <th scope="col">Nutrients</th>
+                <th scope="col">Amount</th>
               </tr>
             </thead>
             <tbody>
