--- a/index.html
+++ b/index.html
@@ -24,19 +24,21 @@
   <body>
     <main>
       <article class="card">
-        <section>
-          <img
-            src="./assets/images/image-omelette.jpeg"
-            alt="A golden-brown omelette folded with fresh vegetables"
-            width="375"
-            height="171"
-          />
-          <h1>Simple Omelette Recipe</h1>
-          <p>
-            An easy and quick dish, perfect for any meal. This classic omelette
-            combines beaten eggs cooked to perfection, optionally filled with
-            your choice of cheese, vegetables, or meats.
-          </p>
+        <img
+          src="./assets/images/image-omelette.jpeg"
+          alt="A golden-brown omelette folded with fresh vegetables"
+          width="375"
+          height="171"
+        />
+        <div class="content">
+          <section>
+            <h1>Simple Omelette Recipe</h1>
+            <p>
+              An easy and quick dish, perfect for any meal. This classic
+              omelette combines beaten eggs cooked to perfection, optionally
+              filled with your choice of cheese, vegetables, or meats.
+            </p>
+          </section>
           <section class="special-note">
             <h2>Preparation time</h2>
             <ul>
@@ -45,87 +47,87 @@
               <li><b>Cooking:</b> 5 minutes</li>
             </ul>
           </section>
-        </section>
-        <section>
-          <h2>Ingredients</h2>
-          <ul>
-            <li>2-3 large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </li>
-          </ul>
-        </section>
-        <hr />
-        <section>
-          <h2>Instructions</h2>
-          <ol>
-            <li>
-              <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of
-              salt and pepper until they are well mixed. You can add a
-              tablespoon of water or milk for a fluffier texture.
-            </li>
-            <li>
-              <b>Heat the pan:</b> Place a non-stick frying pan over medium heat
-              and add butter or oil.
-            </li>
-            <li>
-              <b>Cook the omelette:</b> Once the butter is melted and bubbling,
-              pour in the eggs. Tilt the pan to ensure the eggs evenly coat the
-              surface.
-            </li>
-            <li>
-              <b>Add fillings (optional):</b> When the eggs begin to set at the
-              edges but are still slightly runny in the middle, sprinkle your
-              chosen fillings over one half of the omelette.
-            </li>
-            <li>
-              <b>Fold and serve:</b> As the omelette continues to cook,
-              carefully lift one edge and fold it over the fillings. Let it cook
-              for another minute, then slide it onto a plate.
-            </li>
-            <li>
-              <b>Enjoy:</b> Serve hot, with additional salt and pepper if
-              needed.
-            </li>
-          </ol>
-        </section>
-        <hr />
-        <section>
-          <h2>Nutrition</h2>
-          <p>
-            The table below shows nutritional values per serving without the
-            additional fillings.
-          </p>
-          <table>
-            <thead class="visually-hidden">
-              <tr>
-                <th scope="col">Nutrients</th>
-                <th scope="col">Amount</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Calories</td>
-                <td>277kcal</td>
-              </tr>
-              <tr>
-                <td>Carbs</td>
-                <td>0g</td>
-              </tr>
-              <tr>
-                <td>Protein</td>
-                <td>20g</td>
-              </tr>
-              <tr>
-                <td>Fat</td>
-                <td>22g</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
+          <section>
+            <h2>Ingredients</h2>
+            <ul>
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
+            </ul>
+          </section>
+          <hr />
+          <section>
+            <h2>Instructions</h2>
+            <ol>
+              <li>
+                <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of
+                salt and pepper until they are well mixed. You can add a
+                tablespoon of water or milk for a fluffier texture.
+              </li>
+              <li>
+                <b>Heat the pan:</b> Place a non-stick frying pan over medium
+                heat and add butter or oil.
+              </li>
+              <li>
+                <b>Cook the omelette:</b> Once the butter is melted and
+                bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </li>
+              <li>
+                <b>Add fillings (optional):</b> When the eggs begin to set at
+                the edges but are still slightly runny in the middle, sprinkle
+                your chosen fillings over one half of the omelette.
+              </li>
+              <li>
+                <b>Fold and serve:</b> As the omelette continues to cook,
+                carefully lift one edge and fold it over the fillings. Let it
+                cook for another minute, then slide it onto a plate.
+              </li>
+              <li>
+                <b>Enjoy:</b> Serve hot, with additional salt and pepper if
+                needed.
+              </li>
+            </ol>
+          </section>
+          <hr />
+          <section>
+            <h2>Nutrition</h2>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+            <table>
+              <thead class="visually-hidden">
+                <tr>
+                  <th scope="col">Nutrients</th>
+                  <th scope="col">Amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Calories</td>
+                  <td>277kcal</td>
+                </tr>
+                <tr>
+                  <td>Carbs</td>
+                  <td>0g</td>
+                </tr>
+                <tr>
+                  <td>Protein</td>
+                  <td>20g</td>
+                </tr>
+                <tr>
+                  <td>Fat</td>
+                  <td>22g</td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
+        </div>
       </article>
     </main>
   </body>
