Improving the semantic nature of the HTML

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A recipe component. This example talks about how to prepare an omelette"
+      content="Learn how to prepare a quick and simple omelette with this step-by-step recipe. Perfect for breakfast, lunch, or dinner."
     />
     <meta
       name="keywords"
-      content="HTML, CSS, Desktop design, Tablet design, Mobile design"
+      content="HTML recipe example, CSS styling, semantic HTML, cooking website, omelette recipe, responsive design"
     />
     <meta name="author" content="Rupali Roy Choudhury" />
     <link href="./style.css" rel="stylesheet" type="text/css" />
@@ -59,7 +59,7 @@
               </li>
             </ul>
           </section>
-          <hr />
+          <hr aria-hidden="true" />
           <section>
             <h2>Instructions</h2>
             <ol>
@@ -93,7 +93,7 @@
               </li>
             </ol>
           </section>
-          <hr />
+          <hr aria-hidden="true" />
           <section>
             <h2>Nutrition</h2>
             <p>
