Adding aria-labelled by with the respective heading

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
               filled with your choice of cheese, vegetables, or meats.
             </p>
           </section>
-          <section class="special-note">
-            <h2>Preparation time</h2>
+          <section class="special-note" aria-labelledby="preparation-time">
+            <h2 id="preparation-time">Preparation time</h2>
             <ul>
               <li><b>Total:</b> Approximately 10 minutes</li>
               <li><b>Preparation:</b> 5 minutes</li>
               <li><b>Cooking:</b> 5 minutes</li>
             </ul>
           </section>
-          <section>
-            <h2>Ingredients</h2>
+          <section aria-labelledby="ingredients">
+            <h2 id="ingredients">Ingredients</h2>
             <ul>
               <li>2-3 large eggs</li>
               <li>Salt, to taste</li>
@@ -60,8 +60,8 @@
             </ul>
           </section>
           <hr aria-hidden="true" />
-          <section>
-            <h2>Instructions</h2>
+          <section aria-labelledby="instructions">
+            <h2 id="instructions">Instructions</h2>
             <ol>
               <li>
                 <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of
@@ -94,8 +94,8 @@
             </ol>
           </section>
           <hr aria-hidden="true" />
-          <section>
-            <h2>Nutrition</h2>
+          <section aria-labelledby="nutrition">
+            <h2 id="nutrition">Nutrition</h2>
             <p>
               The table below shows nutritional values per serving without the
               additional fillings.
