--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </p>
           </section>
           <section class="special-note" aria-labelledby="preparation-time">
-            <h2 id="preparation-time">Preparation time</h2>
+            <div id="preparation-time" role="heading" aria-level="2">
+              Preparation time
+            </div>
             <ul>
               <li><b>Total:</b> Approximately 10 minutes</li>
               <li><b>Preparation:</b> 5 minutes</li>
