Changing it back to h2 since ideally it needs to have proper semantics meaning

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
             </p>
           </section>
           <section class="special-note" aria-labelledby="preparation-time">
-            <div id="preparation-time" role="heading" aria-level="2">
-              Preparation time
-            </div>
+            <h2 id="preparation-time">Preparation time</h2>
             <ul>
               <li><b>Total:</b> Approximately 10 minutes</li>
               <li><b>Preparation:</b> 5 minutes</li>
