Using webp version of the image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <article class="card">
         <img
-          src="./assets/images/image-omelette.jpeg"
+          src="./assets/images/image-omelette.webp"
           alt="A golden-brown omelette folded with fresh vegetables"
           width="375"
           height="171"
