Trying another method with :before and content

--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
           <section class="special-note" aria-labelledby="preparation-time">
             <h2 id="preparation-time">Preparation time</h2>
             <ul>
-              <li><b>Total:</b> Approximately 10 minutes</li>
-              <li><b>Preparation:</b> 5 minutes</li>
-              <li><b>Cooking:</b> 5 minutes</li>
+              <li>
+                <span><b>Total:</b> Approximately 10 minutes</span>
+              </li>
+              <li>
+                <span><b>Preparation:</b> 5 minutes</span>
+              </li>
+              <li>
+                <span><b>Cooking:</b> 5 minutes</span>
+              </li>
             </ul>
           </section>
           <section aria-labelledby="ingredients">
