--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <main>
+      <h1 class="visually-hidden">Recipe page</h1>
       <article class="card">
         <img
           src="./assets/images/image-omelette.webp"
@@ -32,7 +33,7 @@
         />
         <div class="content">
           <section>
-            <h1>Simple Omelette Recipe</h1>
+            <h2>Simple Omelette Recipe</h2>
             <p>
               An easy and quick dish, perfect for any meal. This classic
               omelette combines beaten eggs cooked to perfection, optionally
@@ -40,7 +41,7 @@
             </p>
           </section>
           <section class="special-note" aria-labelledby="preparation-time">
-            <h2 id="preparation-time">Preparation time</h2>
+            <h3 id="preparation-time">Preparation time</h3>
             <ul>
               <li>
                 <span><b>Total:</b> Approximately 10 minutes</span>
@@ -54,7 +55,7 @@
             </ul>
           </section>
           <section aria-labelledby="ingredients">
-            <h2 id="ingredients">Ingredients</h2>
+            <h3 id="ingredients">Ingredients</h3>
             <ul>
               <li>2-3 large eggs</li>
               <li>Salt, to taste</li>
@@ -67,7 +68,7 @@
           </section>
           <hr aria-hidden="true" />
           <section aria-labelledby="instructions">
-            <h2 id="instructions">Instructions</h2>
+            <h3 id="instructions">Instructions</h3>
             <ol>
               <li>
                 <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of
@@ -101,7 +102,7 @@
           </section>
           <hr aria-hidden="true" />
           <section aria-labelledby="nutrition">
-            <h2 id="nutrition">Nutrition</h2>
+            <h3 id="nutrition">Nutrition</h3>
             <p>
               The table below shows nutritional values per serving without the
               additional fillings.
